tests/sksl/errors/RedeclareStruct.glsl
### Compilation failed:

error: 1: expected an identifier, but found type 'void'
struct void {
       ^^^^
1 error
